# silent-ping

./: index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: silent.m4a
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs
